Fixed Issue #9: "Previous" and "Next" buttons overlap when view is too small

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -45,3 +45,9 @@
   cursor: not-allowed;
   background-color: #999;
 }
+
+@media all and (max-width:768px) {
+  .responsive-item {
+    display:block;
+  }
+}
