--- a/_sass/_positions.scss
+++ b/_sass/_positions.scss
@@ -1,7 +1,16 @@
-.left {
+.left,
+.responsive-left {
   float: left;
 }
 
-.right {
+.right,
+.responsive-right {
   float: right;
+}
+
+@media all and (max-width:768px) {
+  .responsive-left,
+  .responsive-right {
+    float: none;
+  }
 }
